fix: remove horizontal scroll

--- a/styles/global.css
+++ b/styles/global.css
@@ -48,6 +48,7 @@ html {
   color: var(--text-color-primary);
 
   overflow-x: hidden;
+  width: 100%;
 
   scroll-behavior: smooth;
 }
